Step 3: Complete Database Schema (Prisma + MySQL)
SCHEMA DESIGN (10 Models + 5 Enums)
===================================

Models Created:
- Category: Hierarchical product categories with self-referential relations
- Product: Complete product catalog with pricing, inventory, SEO
- ProductImage: Multiple images per product with ordering
- Order: Customer orders with delivery tracking
- OrderItem: Line items with product snapshots
- Payment: Payment records with Mpesa integration fields
- Review: Product reviews with ratings and moderation
- Notification: Email/SMS notification logs
- Settings: System configuration key-value store
- AdminLog: Audit trail for admin actions

Enums Defined:
- OrderStatus: PENDING, PROCESSING, SHIPPED, DELIVERED, CANCELLED, REFUNDED
- PaymentStatus: PENDING, PROCESSING, PAID, FAILED, REFUNDED
- PaymentMethod: MPESA, CARD, BANK_TRANSFER, CASH
- NotificationType: 8 types for various order/payment notifications
- NotificationChannel: EMAIL, SMS, WHATSAPP, PUSH

Features:
✅ Comprehensive product management (pricing, inventory, SEO)
✅ Order lifecycle tracking with status management
✅ Mpesa payment integration fields
✅ Product reviews with ratings and moderation
✅ Notification system for emails and SMS
✅ Admin audit logging
✅ 25+ indexes for performance optimization
✅ Proper foreign key constraints and cascading deletes
✅ Decimal precision for currency (10,2)
✅ Self-referential categories for hierarchy

Files Added:
- prisma/schema.prisma: Complete database schema (400+ lines)
- prisma/seed.ts: Sample data seeding script
- src/lib/prisma.ts: Prisma client singleton
- STEP-3-DATABASE-SCHEMA.md: Comprehensive documentation (1,300+ lines)

Configuration:
- Added database scripts to package.json
- Installed tsx for TypeScript seed execution
- Generated Prisma client to src/generated/prisma
- Formatted schema with Prisma CLI

Documentation Includes:
- Entity relationship diagrams
- Complete model documentation
- Field-by-field explanations
- Index s

--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:push": "prisma db push",
+    "db:seed": "tsx prisma/seed.ts",
+    "db:studio": "prisma studio"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.2",
@@ -33,6 +41,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
