--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@clerk/nextjs": "^6.36.2",
     "@prisma/client": "^6.19.1",
     "@tanstack/react-query": "^5.90.12",
+    "@types/nodemailer": "^7.0.4",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.560.0",
     "next": "16.0.8",
+    "nodemailer": "^7.0.11",
     "prisma": "^6.19.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
