--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prisma": "^6.19.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-easy-crop": "^5.5.6",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.5.1",
     "zod": "^4.1.13",
