--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "^6.19.1",
     "@tanstack/react-query": "^5.90.12",
     "@types/nodemailer": "^7.0.4",
+    "@vercel/blob": "^2.0.0",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.560.0",
