--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,6 @@
   "buildCommand": "prisma generate && next build",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["iad1"],
-  "crons": [
-    {
-      "path": "/api/admin/abandoned-carts/send-reminders",
-      "schedule": "0 * * * *"
-    }
-  ]
+  "regions": ["iad1"]
 }
 
