Add database cleanup functionality for test data
- Create /api/admin/cleanup endpoint to delete all products and orders
- Add CleanupButton component in admin products page
- Create cleanup-database.ts script for CLI cleanup
- Add npm script 'db:cleanup' for easy execution
- Includes proper confirmation and error handling
- Deletes orders, products, flash sales, and related data

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:push": "prisma db push",
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
+    "db:cleanup": "tsx scripts/cleanup-database.ts",
     "postinstall": "prisma generate"
   },
   "prisma": {
