--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^6.19.1",
     "@tanstack/react-query": "^5.90.12",
     "@types/nodemailer": "^7.0.4",
+    "@vercel/analytics": "^1.6.1",
     "@vercel/blob": "^2.0.0",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
