Fix category delete button functionality
- Added delete handler with confirmation dialog
- Added loading state and toast notifications
- Added product count check before deletion
- Updated DELETE API endpoint to check for products
- Added proper error handling for foreign key constraints
- Delete button now works properly with user feedback

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
     "db:cleanup": "tsx scripts/cleanup-database.ts",
+    "db:add-categories": "tsx scripts/add-categories.ts",
+    "db:remove-old-categories": "tsx scripts/remove-old-categories.ts",
     "postinstall": "prisma generate"
   },
   "prisma": {
