--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "db:optimize": "tsx scripts/optimize-storage.ts",
     "db:add-categories": "tsx scripts/add-categories.ts",
     "db:remove-old-categories": "tsx scripts/remove-old-categories.ts",
+    "db:clear-images": "tsx scripts/clear-product-images.ts",
     "postinstall": "prisma generate"
   },
   "prisma": {
@@ -31,6 +32,7 @@
     "@types/nodemailer": "^7.0.4",
     "@vercel/analytics": "^1.6.1",
     "@vercel/blob": "^2.0.0",
+    "cloudinary": "^2.5.1",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.560.0",
