--- a/package.json
+++ b/package.json
@@ -30,14 +30,17 @@
     "@prisma/client": "^6.19.1",
     "@tanstack/react-query": "^5.90.12",
     "@types/nodemailer": "^7.0.4",
+    "@types/pdfkit": "^0.17.4",
     "@vercel/analytics": "^1.6.1",
     "@vercel/blob": "^2.0.0",
-    "cloudinary": "^2.5.1",
     "axios": "^1.13.2",
+    "cloudinary": "^2.5.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.560.0",
     "next": "16.0.8",
     "nodemailer": "^7.0.11",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.17.2",
     "prisma": "^6.19.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
