--- a/.env.local.example
+++ b/.env.local.example
@@ -15,8 +15,8 @@ CLERK_SECRET_KEY=sk_test_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 # Clerk URLs (usually these defaults work)
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
-NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
-NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
+# NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+# NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
 # ============================================
 # APP CONFIGURATION
